maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:34: error: type mismatch;
 found   : Unit
 required: Boolean
	if(isDirectionFree(Direction.NORTH)){
                          ^